<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiling Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="choose_file">Choose file</string>
    <string name="error_files">Error retrieving files</string>
    <string name="choose_page">Choose page</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="error_picture">Error retrieving picture info</string>
    <string name="error_unknown">Something weird happened. Please try again</string>


    <string name="hint_pdf_id">Add pdf id</string>
    <string name="hint_page">Select page</string>
    <string name="start">Start</string>
    <string name="title_activity_tile">TileActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pdf_example">1422042559563</string>

    <string name="click_add_pin">Click where you want to add pin</string>
    <string name="click_remove_pin">Click pin to remove</string>
    <string name="file_name">File: </string>
    <string name="file_pages">Pages: </string>
    <string name="time_render">Time Render(s): </string>
    <string name="still_processing">Still processing</string>
    <string name="still_processing_toast">The selected file is still being processed, try again later</string>
</resources>
