<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3"
    android:orientation="horizontal"
    tools:context=".GridXMLActivity" >
    <TextView
        android:text="@string/file_name"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/filename"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:text="@string/file_pages"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/filePages"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:text="@string/time_render"
        android:textSize="@dimen/s_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/timeRender"
        android:textSize="@dimen/text_size"/>
</GridLayout>